<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Gateway</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message_ip">Host IP</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="edit_message_port">Host port</string>
    <string name="connection_hide"/>
    <string name="connection_connecting">Connecting...</string>
    <string name="connection_connected">Connected</string>
    <string name="connection_disconnecting">Disconnecting...</string>
    <string name="sent_counter">Sent: </string>
    <string name="received_counter">Received: </string>
    <string name="sent_num">0</string>
    <string name="received_num">0</string>

</resources>
