<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SMSActivity"
    android:keepScreenOn="true" >

       <EditText
           android:id="@+id/hostIPText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:layout_marginTop="10dp"
           android:ems="10"
           android:hint="@string/edit_message_ip" >

           <requestFocus />
       </EditText>

       <EditText
           android:id="@+id/hostPortText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:layout_marginTop="10dp"
           android:ems="10"
           android:hint="@string/edit_message_port" />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="100dp" >

           <Button
               android:id="@+id/connectionButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:layout_below="@+id/connectionButton"
               android:onClick="connectFunction"
               android:text="@string/button_connect" />

           <TextView
               android:id="@+id/connectionStatus"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignBaseline="@+id/connectionButton"
               android:layout_alignBottom="@+id/connectionButton"
               android:layout_alignParentRight="true"
               android:text="@string/connection_hide"
               android:textAppearance="?android:attr/textAppearanceMedium" />

       </RelativeLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <TextView
               android:id="@+id/textView_sent"
               android:layout_width="75dp"
               android:layout_height="wrap_content"
               android:text="@string/sent_counter" />

           <TextView
               android:id="@+id/textView_sentCounter"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="@string/sent_num" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <TextView
               android:id="@+id/textView_received"
               android:layout_width="75dp"
               android:layout_height="wrap_content"
               android:text="@string/received_counter" />

           <TextView
               android:id="@+id/textView_receivedCounter"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="@string/received_num" />

       </LinearLayout>

</LinearLayout>